--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/material-top-tabs": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
     "cibus": "file:",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "expo-camera": "~15.0.16"
+    "react-native-tab-view": "^4.0.0",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
