--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,11 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.0.0",
     "react-native-tab-view": "^4.0.0",
-    "react-native-web": "~0.19.10",
-    "react-native-pager-view": "6.3.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
