--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^4.0.0",
     "react-native-tab-view": "^4.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
