--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/drawer": "^7.0.1",
     "@react-navigation/material-top-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
     "cibus": "file:",
-    "expo": "~51.0.28",
-    "expo-camera": "~15.0.16",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.4",
+    "expo-camera": "~16.0.3",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.4.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.0.0",
     "react-native-tab-view": "^4.0.0",
     "react-native-vector-icons": "^10.2.0",
