--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,12 @@
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
     "cibus": "file:",
-    "expo": "^52.0.4",
-    "expo-camera": "~16.0.3",
+    "expo": "^52.0.7",
+    "expo-camera": "^16.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "^0.76.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.4.1",
