--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
     "cibus": "file:",
-    "expo": "^52.0.7",
-    "expo-camera": "^16.0.5",
+    "expo": "^52.0.9",
+    "expo-camera": "^16.0.6",
     "expo-secure-store": "^14.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
@@ -29,7 +29,7 @@
     "react-native": "^0.76.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "6.4.1",
+    "react-native-pager-view": "^6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
